CMAKE_MINIMUM_REQUIRED(VERSION 2.8) # cmakeæœ€ä½ç‰ˆæœ¬è¦æ±?

PROJECT(SQL-ON-LSM)    # å·¥ç¨‹å? CppTemplate

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11") # æ·»åŠ c++11æ ‡å‡†æ”¯æŒ

SET(CMAKE_C_COMPILER "/usr/bin/gcc") # é»˜è®¤cç¼–è¯‘å™?
SET(CMAKE_CXX_COMPILER "/usr/bin/g++") # é»˜è®¤c++ç¼–è¯‘å™?

SET(CMAKE_BUILD_TYPE "Debug")  # Debugæ¨¡å¼ é€‰é¡¹: Release Debug MinSizeRel RelWithDebInfo

SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")  # debugæ¨¡å¼ä¸? gdbç›¸å…³é€‰é¡¹
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall") # releaseæ¨¡å¼ä¸? gdbç›¸å…³é€‰é¡¹

# set(CMAKE_VERBOSE_MAKEFILE ON) # å¼€å¯è°ƒè¯? å‡ºç°é—®é¢˜æ—¶å¼€å?

# enable_testing() # æ‰“å¼€æµ‹è¯•

add_definitions(-DDEBUG) # ç›¸å½“äºä»£ç ä¸­ #define DEBUG

# add_subdirectory(test) # æ·»åŠ testå­ç›®å½?

# SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin") # å¯æ‰§è¡Œæ–‡ä»¶è¾“å‡ºç›®å½?

INCLUDE_DIRECTORIES(
   "${PROJECT_SOURCE_DIR}"
   "${PROJECT_SOURCE_DIR}/include"
   "${PROJECT_SOURCE_DIR}/include/antlr4-runtime" 
   "${PROJECT_SOURCE_DIR}/src" 
   "${PROJECT_SOURCE_DIR}/src/parser/antlr") # å¤´æ–‡ä»¶åŒ…å«ç›®å½?

AUX_SOURCE_DIRECTORY("${PROJECT_SOURCE_DIR}/src" simplesql) # æ·»åŠ æºä»£ç æ–‡ä»¶å¤¹, è‡ªåŠ¨æ‰«ææ‰€æœ‰æ–‡ä»?
AUX_SOURCE_DIRECTORY("${PROJECT_SOURCE_DIR}/src/expressions" simplesql_expressions)
AUX_SOURCE_DIRECTORY("${PROJECT_SOURCE_DIR}/src/datatypes" simplesql_datatypes)
AUX_SOURCE_DIRECTORY("${PROJECT_SOURCE_DIR}/src/operators" simplesql_operators)
AUX_SOURCE_DIRECTORY("${PROJECT_SOURCE_DIR}/src/parser" simplesql_parser)
AUX_SOURCE_DIRECTORY("${PROJECT_SOURCE_DIR}/src/analyzer" simplesql_analyzer)
AUX_SOURCE_DIRECTORY("${PROJECT_SOURCE_DIR}/src/execution" simplesql_execution)
AUX_SOURCE_DIRECTORY("${PROJECT_SOURCE_DIR}/src/parser/antlr" simplesql_parser_antlr)
AUX_SOURCE_DIRECTORY("${PROJECT_SOURCE_DIR}/src/util" simplesql_util)

AUX_SOURCE_DIRECTORY("${PROJECT_SOURCE_DIR}/test/parser" tests_parser)
AUX_SOURCE_DIRECTORY("${PROJECT_SOURCE_DIR}/test/expressions" tests_expressions)
AUX_SOURCE_DIRECTORY("${PROJECT_SOURCE_DIR}/test/analyzer" tests_analyzer)
AUX_SOURCE_DIRECTORY("${PROJECT_SOURCE_DIR}/test/execution" tests_execution)
AUX_SOURCE_DIRECTORY("${PROJECT_SOURCE_DIR}/test/util" tests_util)

AUX_SOURCE_DIRECTORY("${PROJECT_SOURCE_DIR}/test" tests)
link_libraries(
   "${PROJECT_SOURCE_DIR}/lib/libgtest.a"
   "${PROJECT_SOURCE_DIR}/lib/libgtest_main.a"
   "${PROJECT_SOURCE_DIR}/lib/libantlr4-runtime.a"
   "${PROJECT_SOURCE_DIR}/lib/libantlr4-runtime.so"
   "${PROJECT_SOURCE_DIR}/lib/libleveldb.a"
   pthread)

add_executable(unit_test # è¾“å‡ºåä¸ºxxxçš„å¯æ‰§è¡Œæ–‡ä»¶
   ${simplesql}
   ${simplesql_expressions}
   ${simplesql_datatypes}
   ${simplesql_operators}
   ${simplesql_parser}
   ${simplesql_parser_antlr}
   ${simplesql_analyzer}
   ${simplesql_execution}
   ${simplesql_util}
   ${tests_parser}
   ${tests_analyzer}
   ${tests_expressions}
   ${tests_execution}
   ${tests_util}
)